# dofus_set

./: .dockerignore  Cargo.toml  Dockerfile  build.rs  fly.toml  justfile
.github/workflows/: fly.yml  rust.yml  site.yml
bench/: Cargo.toml
bench/src/: main.rs
data/: items.json  mounts.json  pets.json  rhineetles.json  sets.json  weapons.json
dofus_characteristics/: Cargo.toml
dofus_characteristics/src/: lib.rs
dofus_items/: Cargo.toml  build.rs
dofus_items/src/: lib.rs
dofus_items/src/data/: mod.rs
dofus_set/: Cargo.toml
dofus_set/src/: anneal.rs  config.rs  dofus_set.rs  items.rs  lib.rs  main.rs  stats.rs
server/: Cargo.toml
server/src/: main.rs
src/: anneal.rs  config.rs  dofus_set.rs  items.rs  lib.rs  main.rs  set.rs  set_build.rs  stats.rs
wasm/: Cargo.toml  index.html
wasm/.cargo/: config.toml
wasm/src/: benchmark.rs  lib.rs  query.rs
web/: .eslintrc.json  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
web/public/: index.html
web/src/: App.css  App.tsx  Item.ts  SetBonus.ts  Spinner.css  Spinner.tsx  WeightsSelector.tsx  app.tsx  classNames.ts  main.tsx
web/src/App/: BannedItems.tsx  BestItemDisplay.tsx  ItemHoverContainer.tsx  LevelSelector.tsx  OverallCharacteristics.tsx  SearchItem.css  SearchItem.tsx  StatIcon.tsx
web/src/app/: globalStyles.css  layout.tsx  page.tsx  recoil.tsx
web/src/components/: item.tsx  optimise.tsx  overall-stats.tsx  set-display.tsx  stat-weight-input.tsx
web/src/components/base/: button.tsx  input.tsx  section.tsx  stack.tsx  tooltip.tsx
web/src/components/config/: advanced.tsx  bannedItems.tsx  config.tsx  damagingMove.tsx  exos.tsx  initialEquipment.tsx  search.tsx  stat-weight-input.tsx
web/src/dofus/: Items.ts  OptimiseApi.ts  Optimiser.ts  SearchApi.ts  Worker.ts  stats.ts
web/src/hooks/: useClientAtom.ts  useValueChanged.ts
web/src/services/: makeUrl.ts
web/src/services/dofus/: item.ts  optimiser.ts  stats.ts  worker.ts
web/src/state/: allItemsState.tsx  bannedItemsState.ts  damagingMovesState.ts  state.ts
