[package]
name = "dofus_set"
version = "0.1.0"
authors = ["Corwin Kuiper <corwin@kuiper.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1", features = ["full"] }
warp = "0.3"

simple_logger = "1.10.0"
log = "0.4.11"

rustc-hash = "1.0"

num_cpus = "1.0"

[build-dependencies]
walkdir = "2.3.1"

[profile.dev]
opt-level = 2

[profile.release]
debug = true
lto = true