[package]
name = "dofus_set"
version = "0.1.0"
authors = ["Corwin Kuiper <corwin@kuiper.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
rustc-hash = "1.0"
rouille = "3.6.1"

simple_logger = "1"
log = "0.4"

[build-dependencies]
walkdir = "2.3.1"

[profile.dev]
opt-level = 2

[profile.release]
debug = true
lto = true