[package]
name = "dofus_set"
version = "0.1.0"
authors = ["Corwin Kuiper <corwin@kuiper.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rustc-hash = "1"
rouille = "3.6"

tracing-serde = "0.1"
tracing-subscriber = "0.3"
tracing = "0.1"

[build-dependencies]
walkdir = "2"

[profile.dev]
opt-level = 2

[profile.release]
debug = true
lto = true