[package]
name = "dofus_items"
version = "0.1.0"
edition = "2021"



[dependencies]
dofus_characteristics = { path = "../dofus_characteristics" }
serde = { version = "1", features = ["derive"] }


[build-dependencies]
dofus_characteristics = { path = "../dofus_characteristics" }
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
