[package]
name = "dofus_set"
version = "0.1.0"
authors = ["Corwin Kuiper <corwin@kuiper.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
linear-map = "1.2"
heapless = "0.8"
dofus_characteristics = { path = "../dofus_characteristics" }
dofus_items = { path = "../dofus_items" }