[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]

dofus_set = {path = "../dofus_set"}
dofus_characteristics = { path = "../dofus_characteristics" }
dofus_items = { path = "../dofus_items" }

rouille = "3.6"

tracing-serde = "0.1"
tracing-subscriber = "0.3"
tracing = "0.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"