[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dofus_set = { path = "../dofus_set" }
dofus_characteristics = { path = "../dofus_characteristics" }
dofus_items = { path = "../dofus_items" }

wasm-bindgen = "0.2"
console_error_panic_hook = "0.1" 
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
thiserror = "2"


[profile.release]
opt-level = 3
debug = true
lto = true
